
Pour plus d'informations sur les États, reportez-vous à la section https://docs.netapp.com/us-en/bluexp-classification/task-managing-repo-scanning.html["Modifier les paramètres de numérisation"].



== 15 mai 2024



=== Version 1.31

.La classification est disponible en tant que service principal dans BlueXP
La classification BlueXP est désormais disponible en tant que fonctionnalité clé dans BlueXP, sans frais supplémentaires pour un maximum de 500 To de données numérisées. Aucune licence de classification ou abonnement payant n'est nécessaire. Alors que nous nous concentrons sur la fonctionnalité de classification BlueXP lors de l'analyse des systèmes de stockage NetApp avec cette nouvelle version, certaines fonctionnalités héritées ne seront disponibles que pour les clients qui avaient déjà payé pour une licence. L'utilisation de ces fonctions héritées expirera lorsque le contrat payé atteindra sa date de fin.

link:reference-free-paid.html["En savoir plus sur les fonctionnalités obsolètes"].



== 01 avril 2024



=== Version 1.30

.Prise en charge de la classification BlueXP RHEL v8.8 et v9.3
Cette version prend en charge Red Hat Enterprise Linux v8.8 et v9.3 en plus de la version 9.x précédemment prise en charge, qui nécessite Podman, plutôt que le moteur Docker. Cela s'applique à toute installation manuelle sur site de la classification BlueXP.

Les systèmes d'exploitation suivants nécessitent l'utilisation du moteur de conteneur Podman et requièrent la classification BlueXP version 1.30 ou supérieure : Red Hat Enterprise Linux version 8.8, 9.0, 9.1, 9.2 et 9.3.

En savoir plus sur https://docs.netapp.com/us-en/bluexp-classification/task-deploy-overview.html["Présentation des déploiements de classifications BlueXP"].

La classification BlueXP est prise en charge si vous installez le connecteur sur un hôte RHEL 8 ou 9 résidant sur site. Elle n'est pas prise en charge si l'hôte RHEL 8 ou 9 réside dans AWS, Azure ou Google Cloud.
