@@ -2560,7 +2560,6 @@
   <block id="c01242a219d7b0beaf6377621fd10547" category="doc">Analysez le stockage objet à l'aide du protocole S3</block>
   <block id="1ba8a6d88a1ff9a34215586899b08a1e" category="paragraph">Vous pouvez gérer le mode d'analyse de vos données dans chacun de vos environnements de travail et sources de données. Vous pouvez effectuer les modifications sur une base de « référentiel », ce qui signifie que vous pouvez apporter des modifications à chaque volume, schéma, utilisateur, etc. En fonction du type de source de données que vous analysez.</block>
   <block id="4cf46b88592b20071552593714707a46" category="paragraph">Si vous avez initialement sélectionné *Mapper tous les volumes* ou *Mapper et classer tous les volumes* lorsque vous avez activé la classification BlueXP pour l'environnement de travail où réside le volume source, la classification BlueXP analyse automatiquement le nouveau volume cloné. Si vous n'avez pas utilisé l'une ou l'autre de ces sélections au départ, vous devrez effectuer une acquisition pour ce nouveau volume <block ref="9c238ad6b45b928020692cb5de74fd06" category="inline-link-macro-rx"></block>.</block>
-  <block id="ac229efd3fa61c5457dcab252996be0b" category="paragraph">La classification BlueXP est désormais disponible en tant que fonctionnalité clé dans BlueXP, sans frais supplémentaires pour un maximum de 500 To de données numérisées. Aucune licence de classification ou abonnement payant n'est nécessaire. Alors que nous nous concentrons sur la fonctionnalité de classification BlueXP lors de l'analyse des systèmes de stockage NetApp avec cette nouvelle version, certaines fonctionnalités héritées ne seront disponibles que pour les clients qui avaient déjà payé pour une licence. L'utilisation de ces fonctions héritées expirera lorsque le contrat payé atteindra sa date de fin.</block>
   <block id="3607a722a9a09bb6d405f4d84609e858" category="inline-link-macro">En savoir plus sur les fonctionnalités obsolètes</block>
   <block id="1a50d9154328b370f6d9bbbab041964a" category="paragraph"><block ref="671322b9b43cc49264f86b21ef88a11d" category="inline-link-macro-rx"></block>.</block>
   <block id="e2175eca7cd7227e608f98540d53af5e" category="paragraph">La version a également supprimé les options suivantes :</block>
@@ -2604,7 +2603,6 @@
   <block id="e22ac25b066b201473de7aa700ef5d92" category="cell">Tarifs</block>
   <block id="b24ce0cd392a5b0b8dedc66c25213594" category="cell">Libre</block>
   <block id="3b8f7696879f77dfc8c74aa8df8db24b" category="cell">Puissance</block>
-  <block id="1210ad5d6a7beaf8ab7fd7d0808a95ca" category="cell">Limité à 500 To</block>
   <block id="a9cec06f0851d8f2722f032a0e63c115" category="cell">Possibilité de voir les métadonnées des fichiers*</block>
   <block id="4f40caf952f66945a674f638c61be8d9" category="paragraph">*Les métadonnées suivantes sont extraites des fichiers lors des analyses de mappage :</block>
   <block id="10fd66f5b4802aee3a88de2a537a57b4" category="list-text">Capacité utilisée</block>
@@ -3555,4 +3553,11 @@ Données d'applications d'entreprise</block>
   <block id="c10aaeed86973ee0f442f2e7b73b80b8" category="paragraph">Pour plus d'informations, voir <block ref="c56cfb642e9d697265520a2d16e8cbad" category="inline-link-macro-rx"></block>.</block>
   <block id="4c59149345d32f10d4c1edb221d77028" category="paragraph">Vous pouvez désormais consulter plus d'informations sur les propriétaires des fichiers enregistrés dans l'onglet Investigation. Lorsque vous affichez les métadonnées d'un fichier dans l'onglet Enquête, recherchez le propriétaire du fichier, puis sélectionnez **Afficher les détails** pour voir le nom d'utilisateur, l'e-mail et le nom du compte SAM. Vous pouvez également consulter les autres éléments appartenant à cet utilisateur. Cette fonctionnalité est disponible uniquement pour les environnements de travail avec Active Directory.</block>
   <block id="476669d16044da6b8fccc04e3a65c887" category="paragraph">Pour plus d'informations, voir <block ref="202490d1a2feeed942d0b33752539ffd" category="inline-link-macro-rx"></block>.</block>
+  <block id="ba0582c1a4216adac557c97d2f92f869" category="inline-link-macro">installer un autre connecteur</block>
+  <block id="bb421402dbabe6eec32567511e69bc2a" category="inline-link-macro">déployer une autre instance de classification</block>
+  <block id="7473cbb9b768b471bd45e7579b544a3a" category="inline-link-macro">Utilisation de plusieurs connecteurs</block>
+  <block id="c430d0ad1a785912ff6e7f2d659d752f" category="paragraph">La BlueXP classification n'impose aucune limite à la quantité de données pouvant être analysée. Chaque connecteur prend en charge l'analyse et l'affichage de 500 Tio de données. Pour analyser plus de 500 Tio de données, <block ref="a34b864875c7f2ebc4a815c94a375e43" category="inline-link-macro-rx"></block> alors <block ref="a51ca3e7fcece55a05339015489757d6" category="inline-link-macro-rx"></block> . + L'interface utilisateur BlueXP affiche les données d'un seul connecteur. Pour obtenir des conseils sur l'affichage des données de plusieurs connecteurs, consultez <block ref="5255e271b4118330c3aac09d32603a12" category="inline-link-macro-rx"></block> .</block>
+  <block id="551fbc3b7472150a5293373b773972d7" category="cell">Limité à 500 Tio*</block>
+  <block id="acdf9d63036f9706b8165f6f6a7117da" category="paragraph">{astérisque} include::_include/connector-limit.adoc[]</block>
+  <block id="e8c9a8c8c457fc72bf3b116575089845" category="paragraph">La BlueXP classification est désormais disponible en tant que fonctionnalité principale de BlueXP sans frais supplémentaires pour un maximum de 500 Tio de données numérisées par connecteur. Aucune licence de classification ou abonnement payant n'est nécessaire. Alors que nous nous concentrons sur la fonctionnalité de classification BlueXP lors de l'analyse des systèmes de stockage NetApp avec cette nouvelle version, certaines fonctionnalités héritées ne seront disponibles que pour les clients qui avaient déjà payé pour une licence. L'utilisation de ces fonctions héritées expirera lorsque le contrat payé atteindra sa date de fin.</block>
 </blocks>
